ansible/files/components/argocd/network/argocd-default-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-default-deny
  namespace: argocd
  labels:
    app.kubernetes.io/managed-by: ansible
    cristex.io/component: argocd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
